--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
+<!-- <app-small-card></app-small-card> -->
+
+<!-- <app-big-card></app-big-card> -->
+
+<!-- <app-menu-bar></app-menu-bar> -->
+
+<app-menu-title></app-menu-title>
 
 <router-outlet/>
