--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<!-- <app-small-card></app-small-card> -->
-
-<!-- <app-big-card></app-big-card> -->
-
-<!-- <app-menu-bar></app-menu-bar> -->
-
-<app-menu-title></app-menu-title>
+<app-home></app-home>
 
 <router-outlet/>
