--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,15 @@
   padding: 0;
   box-sizing: border-box;
   background: #111;
+  color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover{
+  color: crimson;
 }
