Estilizando o Small-card

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,19 @@
-<p>small-card works!</p>
+<div class="container_small-card">
+
+  <div class="container_small-card-content">
+    <div class="small-card_picture">
+      <img src="https://hips.hearstapps.com/hmg-prod/images/disneychannel-1614633985.jpg" alt="" height="260px">
+    </div>
+
+    <div class="small-card_title">
+      <h1><a href="#" target="_blank">Saiu a nova versão do Angular</a></h1>
+    </div>
+  </div>
+
+  <div class="container_small-card-separator">
+    <hr>
+  </div>
+
+</div>
+
+
