--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,3 +5,9 @@
   justify-content: center;
    align-items: center;
 }
+
+header{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
