Tornando componentes dinamicos

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,14 +1,14 @@
 <div class="container_big-card">
 
   <div class="big-card_picture">
-    <img src="https://media.licdn.com/dms/image/D4E12AQGx_XxlH8rHLw/article-cover_image-shrink_600_2000/0/1699328092463?e=2147483647&v=beta&t=ZZi_XzY235cTKt324objag2rEP0wyrQDB2XCHUNW3cA" alt="" height="260px">
+    <img src="{{photoCover}}" alt="" height="260px">
   </div>
 
   <div class="big-card_title">
-    <h1><a href="https://blog.angular.io/introducing-angular-v17-4d7033312e4b" target="_blank">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#" target="_blank">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card_description">
-    <p><a href="https://blog.angular.io/introducing-angular-v17-4d7033312e4b" target="_blank">Lançado dia 6 de novembro de 2023 , o Angular v17 traz algumas das novidades, destacam-se aprimoramentos no Server-Side Rendering (SSR), a adoção do Vite e esbuild, a introdução de novos lifecycle hooks, entre outros recursos</a></p>
+    <p><a href="#" target="_blank">{{cardDescription}}</a></p>
   </div>
 
 </div>
