--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,11 +2,11 @@
 
   <div class="container_small-card-content">
     <div class="small-card_picture">
-      <img src="https://hips.hearstapps.com/hmg-prod/images/disneychannel-1614633985.jpg" alt="" height="260px">
+      <img src="{{photoCover}}" alt="" height="260px">
     </div>
 
     <div class="small-card_title">
-      <h1><a href="#" target="_blank">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#" target="_blank">{{cardTitle}}</a></h1>
     </div>
   </div>
 
