--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,13 @@
 <app-menu-title></app-menu-title>
 <div class="container_articles">
   <div class="articles_main">
-    <app-big-card></app-big-card>
+    <app-big-card photoCover="https://media.licdn.com/dms/image/D4E12AQGx_XxlH8rHLw/article-cover_image-shrink_600_2000/0/1699328092463?e=2147483647&v=beta&t=ZZi_XzY235cTKt324objag2rEP0wyrQDB2XCHUNW3cA" cardTitle="Saiu a nova versão do Angular" cardDescription="Lançado dia 6 de novembro de 2023 , o Angular v17 traz algumas das novidades, destacam-se aprimoramentos no Server-Side Rendering (SSR), a adoção do Vite e esbuild, a introdução de novos lifecycle hooks, entre outros recursos">
+    </app-big-card>
+
   </div>
   <div class="articles_others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card photoCover="https://hips.hearstapps.com/hmg-prod/images/disneychannel-1614633985.jpg" cardTitle="Melhores Series"></app-small-card>
+    <app-small-card photoCover="https://d2d7ho1ae66ldi.cloudfront.net/ArquivoNoticias/55ac55c4-5bb0-11ed-aa6e-9587410378a2/Fgpu17hWQAUmJ5n.jpeg" cardTitle="As series mais assistidas"></app-small-card>
+    <app-small-card photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWOFa-q3jErphKFGyx9bH7l_13RXmtCiIyvA&usqp=CAU" cardTitle="O novo filme da Fuga da Galinhas"></app-small-card>
   </div>
 </div>
