--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -5,10 +5,10 @@
   </div>
 
   <div class="big-card_title">
-    <h1><a href="#" target="_blank">{{cardTitle}}</a></h1>
+    <h1><a [routerLink]="['content',Id]" target="_blank">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card_description">
-    <p><a href="#" target="_blank">{{cardDescription}}</a></p>
+    <p><a [routerLink]="['content',Id]" target="_blank">{{cardDescription}}</a></p>
   </div>
 
 </div>
