--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="small-card_title">
-      <h1><a href="#" target="_blank">{{cardTitle}}</a></h1>
+      <h1><a [routerLink]="['content',Id]" target="_blank">{{cardTitle}}</a></h1>
     </div>
   </div>
 
